location views regenerated

--- a/app/views/locations/index.html.slim
+++ b/app/views/locations/index.html.slim
@@ -1,10 +1,6 @@
+- title_for Location
 .page-header
-  = link_to locations_path(format: :csv), id: 'export-csv-button', class: 'btn btn-default' do
-    span.glyphicon.glyphicon-export
-    =< t(:export)
-  = link_to new_location_path, class: 'btn btn-primary' do 
-    span.glyphicon.glyphicon-plus
-    =< t(:new)
+  = new_link new_location_path
   h2
     => @locations.count
     = Location.model_name.human count: @locations.count
