--- a/app/views/locations/show.html.slim
+++ b/app/views/locations/show.html.slim
@@ -1,13 +1,8 @@
+- title_for @location, :name
 .page-header
-  = link_to locations_path, class: 'btn btn-default' do 
-    span.glyphicon.glyphicon-list-alt
-    =< t(:list)
-  = link_to edit_location_path(@location), class: 'btn btn-primary' do
-    span.glyphicon.glyphicon-pencil
-    =< t(:edit)
-  => link_to @location, method: :delete, data: { confirm: t(:confirm_delete, model: Location.model_name.human) }, class: 'btn btn-danger' do
-    span.glyphicon.glyphicon-remove
-    =< t(:delete)
+  = list_link locations_url
+  = edit_link edit_location_url(@location)
+  = delete_link @location
   h2
     => @location.name
     small = Location.model_name.human
