--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -28,6 +28,8 @@
             = link_to locations_title, locations_url, tabindex: -1
           li class=('active' if controller_name == 'teachers')
             = link_to teachers_title, teachers_url, tabindex: -1
+          li class=('active' if controller_name == 'seminars')
+            = link_to seminars_title, seminars_url, tabindex: -1
           /= navbar_dropdown 'Auswertungen' do
             - Report.in_menu.all.each do |report|
               li
