--- a/app/views/teachers/index.html.slim
+++ b/app/views/teachers/index.html.slim
@@ -9,16 +9,10 @@
   table.table.table-striped.table-bordered.table-hover.table-clickable
     thead
       tr
-        th = Teacher.human_attribute_name(:first_name)
-        th = Teacher.human_attribute_name(:last_name)
-        th = Teacher.human_attribute_name(:title)
-        th = Teacher.human_attribute_name(:address)
-        th = Teacher.human_attribute_name(:contact)
+        th = Teacher.human_attribute_name(:name)
+        th = Teacher.human_attribute_name(:profession)
     tbody
       - @teachers.each do | teacher |
         tr data = {url: url_for(teacher)}
-          td = teacher.first_name
-          td = teacher.last_name
-          td = teacher.title
-          td = teacher.address
-          td = teacher.contact
+          td = teacher.name
+          td = teacher.profession
