--- a/app/views/teachers/show.html.slim
+++ b/app/views/teachers/show.html.slim
@@ -7,7 +7,7 @@
     => @teacher.name
     small = Teacher.model_name.human
 
-.row
+/.row
   .col-md-6 = panel_box title: Teacher.model_name.human do
     .row
       label.col-md-4 => Teacher.human_attribute_name(:first_name)
@@ -16,11 +16,12 @@
       label.col-md-4 => Teacher.human_attribute_name(:last_name)
       .col-md-8 = @teacher.last_name
     .row
-      label.col-md-4 => Teacher.human_attribute_name(:title)
-      .col-md-8 = @teacher.title
-    .row
       label.col-md-4 => Teacher.human_attribute_name(:address)
       .col-md-8 = @teacher.address
     .row
       label.col-md-4 => Teacher.human_attribute_name(:contact)
       .col-md-8 = @teacher.contact
+= panel_box title: 'Seminare' do
+  ul
+    - @teacher.seminars.each do |seminar|
+      li = link_to seminar.title, seminar
