--- a/app/views/locations/_form.html.slim
+++ b/app/views/locations/_form.html.slim
@@ -5,7 +5,7 @@
     .col-md-6
       .form-inputs
         = f.input :name
-        = f.input :short
+        = f.input :description
         /= f.input :address
 
   section.action-buttons
