install froala wysiwyg editor

--- a/app/views/seminars/_form.html.slim
+++ b/app/views/seminars/_form.html.slim
@@ -14,14 +14,14 @@
   .row
     .col-md-6
       .form-inputs
-        = f.input :benefit, input_html: { rows: 10 }
+        = f.input :benefit, input_html: { rows: 20, class: 'editor' }
     .col-md-6
       .form-inputs
-        = f.input :content, input_html: { rows: 10 }
+        = f.input :content, input_html: { rows: 20, class: 'editor'  }
   .row
     .col-md-6
       .form-inputs
-        = f.input :notes, input_html: { rows: 10 }
+        = f.input :notes, input_html: { rows: 20, class: 'editor'  }
 
   section.action-buttons
     .col-md-12
