--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *
  *= require froala_editor
  *= require font-awesome
+ *= require select2
+ *= require select2-bootstrap
  *= require_tree .
  *= require_self
  */
