--- a/app/views/teachers/show.html.slim
+++ b/app/views/teachers/show.html.slim
@@ -8,26 +8,32 @@
     small = Teacher.model_name.human
 
 .row
-  .col-md-6 = panel_box title: Teacher.model_name.human do
-    .row
-      label.col-md-4 => Teacher.human_attribute_name(:title)
-      .col-md-8 = @teacher.title
-    .row
-      label.col-md-4 => Teacher.human_attribute_name(:first_name)
-      .col-md-8 = @teacher.first_name
-    .row
-      label.col-md-4 => Teacher.human_attribute_name(:last_name)
-      .col-md-8 = @teacher.last_name
-    .row
-      label.col-md-4 => Teacher.human_attribute_name(:profession)
-      .col-md-8 = @teacher.profession
-  /.col-md-6 = panel_box title: 'Seminare' do
-    ul
-      - @teacher.seminars.each do |seminar|
-        li = link_to seminar.title, seminar
-  .col-md-6 = panel_box_with_table title: 'Seminare' do
-    table.table.table-condensed.table-striped.table-clickable
+  label.col-md-2 => Teacher.human_attribute_name(:title)
+  .col-md-10 = @teacher.title
+.row
+  label.col-md-2 => Teacher.human_attribute_name(:first_name)
+  .col-md-10 = @teacher.first_name
+.row
+  label.col-md-2 => Teacher.human_attribute_name(:last_name)
+  .col-md-10 = @teacher.last_name
+.row
+  label.col-md-2 => Teacher.human_attribute_name(:profession)
+  .col-md-10 = @teacher.profession
+
+- if @teacher.seminars.any?
+  h4 = Seminar.model_name.human count: 2
+  .table-responsive
+    table.table.table-striped.table-bordered.table-hover.table-clickable
+      thead
+        tr
+          th = Seminar.human_attribute_name(:number)
+          th = Seminar.human_attribute_name(:title)
+          th = Seminar.human_attribute_name(:subtitle)
+          th = Seminar.human_attribute_name(:location)
       tbody
-        - @teacher.seminars.order(:title).each do |seminar|
-          tr data={ url: url_for(seminar) }
+        - @teacher.seminars.each do |seminar|
+          tr data = {url: url_for(seminar)}
+            td.number = seminar.number
             td = seminar.title
+            td = seminar.subtitle
+            td = seminar.location.name
