--- a/app/views/seminars/index.html.slim
+++ b/app/views/seminars/index.html.slim
@@ -4,24 +4,5 @@
   h2
     => @seminars.count
     = Seminar.model_name.human count: @seminars.count
-
-.table-responsive
-  table.table.table-striped.table-bordered.table-hover.table-clickable
-    thead
-      tr
-        th = Seminar.human_attribute_name(:number)
-        th = Seminar.human_attribute_name(:title)
-        th = Seminar.human_attribute_name(:subtitle)
-        th = Seminar.human_attribute_name(:teachers)
-        th = Seminar.human_attribute_name(:max_attendees)
-    tbody
-      - @seminars.each do | seminar |
-        tr data = {url: url_for(seminar)}
-          td.number = seminar.number
-          td = seminar.title
-          td = seminar.subtitle
-          td
-            ul.list-inline
-              - seminar.teachers.each do |teacher|
-                li = link_to teacher.name, teacher
-          td = seminar.max_attendees
+      
+= render 'table', seminars: @seminars
