--- a/app/views/seminars/edit.html.slim
+++ b/app/views/seminars/edit.html.slim
@@ -1,7 +1,7 @@
 - title_for @seminar, :name
 .page-header
   h2
-    => @seminar.name
+    => @seminar.number
     small = Seminar.model_name.human
 
 = render 'form'
